Essential webpack configuration.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110119116-1"></script>
@@ -9,41 +9,34 @@
         gtag('js', new Date());
         gtag('config', 'UA-110119116-1');
     </script>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="theme-color" content="#d7b098">
-    <meta name="description" content="Crashinvaders Official Site">
-    <meta name="author" content="Anton Chekulaev">
     <meta name="google-site-verification" content="DlhZ40EQqdoDURJOcpZPqqfIKhL6ZZ3jtxHP1Wawono">
-    <link rel="icon" href="favicon.ico">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
 
     <title>Crashinvaders</title>
+    <meta name="description" content="Crashinvaders Official Site">
+    <meta name="author" content="Anton Chekulaev">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
+    <meta name="theme-color" content="#d7b098">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link type="text/css" href="css/index.min.css" rel="stylesheet">
-    <link type="text/css" href="css/aos.css" rel="stylesheet">
-
-    <script src="js/aos.js"></script>
-    <script src="js/preload-it.min.js"></script>
+    <link rel="icon" href="../images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/png">
 </head>
-
 <body>
 
-<div class="preloader-overlay">
-    <div class="preloader-content">
-        <img class="preloader-logo" src="images/crash-logo.png"/>
-        <div class="preloader-bar-frame">
-            <div class="preloader-bar-fill"></div>
-        </div>
-    </div>
-</div>
+<!--<div class="preloader-overlay">-->
+<!--    <div class="preloader-content">-->
+<!--        <img class="preloader-logo" src="../images/crash-logo.png"/>-->
+<!--        <div class="preloader-bar-frame">-->
+<!--            <div class="preloader-bar-fill"></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div class="site-content">
 
     <div class="header-pane">
-        <img class="header-logo" src="images/crash-logo.png"/>
+        <img class="header-logo" src="../images/crash-logo.png"/>
     </div>
 
     <div class="main-container">
@@ -73,7 +66,7 @@
 
         <div class="section-title-bg">
             <div class="section-title-text">Our Games</div>
-            <img class="section-badge" src="images/section-badge-games.png"/>
+            <img class="section-badge" src="../images/section-badge-games.png"/>
         </div>
 
         <div class="feature-section">
@@ -81,13 +74,13 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                       images/thumb-getreact0.png,
-                       images/thumb-getreact1.png,
-                       images/thumb-getreact2.png,
-                       images/thumb-getreact3.png,
-                       images/thumb-getreact4.png,
-                       images/thumb-getreact5.png"></div>
-                    <img class="thumb-icon" src="images/icon-getreact.png"/>
+                       ../images/thumb-getreact0.png,
+                       ../images/thumb-getreact1.png,
+                       ../images/thumb-getreact2.png,
+                       ../images/thumb-getreact3.png,
+                       ../images/thumb-getreact4.png,
+                       ../images/thumb-getreact5.png"></div>
+                    <img class="thumb-icon" src="../images/icon-getreact.png"/>
                     <div class="thumb-image-dim" style="background-color: #537699"></div>
                 </div>
                 <div class="feature-frame">
@@ -96,15 +89,15 @@
                     <div class="thumb-links-pane">
                         <p class="thumb-available-text">Re-release soon:</p>
                         <div style="display: inline-block">
-        <!--                    <a class="btn-app-link appstore" target="_blank"-->
-        <!--                       href="https://itunes.apple.com/app/id1075864120"></a>-->
-        <!--                    <a class="btn-app-link android" target="_blank"-->
-        <!--                       href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>-->
+                            <!--                    <a class="btn-app-link appstore" target="_blank"-->
+                            <!--                       href="https://itunes.apple.com/app/id1075864120"></a>-->
+                            <!--                    <a class="btn-app-link android" target="_blank"-->
+                            <!--                       href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>-->
                             <a href="#" class="btn-app-link appstore disabled">
-                                <img class="soon-badge" src="images/soon-badge.png"/>
+                                <img class="soon-badge" src="../images/soon-badge.png"/>
                             </a>
                             <a href="#" class="btn-app-link android disabled">
-                                <img class="soon-badge" src="images/soon-badge.png"/>
+                                <img class="soon-badge" src="../images/soon-badge.png"/>
                             </a>
                             <a class="btn-app-link web" target="_blank"
                                href="http://crashinvaders.com/getreact"></a>
@@ -117,12 +110,12 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                              images/thumb-jdog0.png,
-                              images/thumb-jdog1.png,
-                              images/thumb-jdog2.png,
-                              images/thumb-jdog3.png,
-                              images/thumb-jdog4.png"></div>
-                    <img class="thumb-icon" src="images/icon-jdog.png"/>
+                              ../images/thumb-jdog0.png,
+                              ../images/thumb-jdog1.png,
+                              ../images/thumb-jdog2.png,
+                              ../images/thumb-jdog3.png,
+                              ../images/thumb-jdog4.png"></div>
+                    <img class="thumb-icon" src="../images/icon-jdog.png"/>
                     <div class="thumb-image-dim" style="background-color: #a8853f"></div>
                 </div>
                 <div class="feature-frame">
@@ -144,11 +137,11 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                              images/thumb-seven0.png,
-                              images/thumb-seven1.png,
-                              images/thumb-seven2.png,
-                              images/thumb-seven3.png"></div>
-                    <img class="thumb-icon smooth-render" src="images/icon-seven.png"/>
+                              ../images/thumb-seven0.png,
+                              ../images/thumb-seven1.png,
+                              ../images/thumb-seven2.png,
+                              ../images/thumb-seven3.png"></div>
+                    <img class="thumb-icon smooth-render" src="../images/icon-seven.png"/>
                     <div class="thumb-image-dim" style="background-color: #4d7b93"></div>
                 </div>
                 <div class="feature-frame">
@@ -165,10 +158,10 @@
                         <div class="thumb-release-date-text">--- 2012 ---</div>
                     </div>
                     <div style="padding: 8px 0">
-                    <a class="article-link" target="_blank" rel="noopener noreferrer"
-                       href="https://gameskeys.net/underrated-board-games-to-play-on-ios">
-                        Read a recent article
-                    </a>
+                        <a class="article-link" target="_blank" rel="noopener noreferrer"
+                           href="https://gameskeys.net/underrated-board-games-to-play-on-ios">
+                            Read a recent article
+                        </a>
                     </div>
                 </div>
             </div>
@@ -177,7 +170,7 @@
 
         <div class="section-title-bg">
             <div class="section-title-text" data-short-text="Commercial">Commercial Projects</div>
-            <img class="section-badge" src="images/section-badge-commercial.png"/>
+            <img class="section-badge" src="../images/section-badge-commercial.png"/>
         </div>
 
         <div class="feature-section">
@@ -185,11 +178,11 @@
             <div class="feature-item" data-aos="fade-in">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                                  images/thumb-fridge-party0.png,
-                                  images/thumb-fridge-party1.png,
-                                  images/thumb-fridge-party2.png,
-                                  images/thumb-fridge-party3.png"></div>
-                    <img class="thumb-icon" src="images/icon-fridge-party.png"/>
+                                  ../images/thumb-fridge-party0.png,
+                                  ../images/thumb-fridge-party1.png,
+                                  ../images/thumb-fridge-party2.png,
+                                  ../images/thumb-fridge-party3.png"></div>
+                    <img class="thumb-icon" src="../images/icon-fridge-party.png"/>
                     <div class="thumb-image-dim" style="background-color: #434f6b"></div>
                 </div>
                 <div class="feature-frame">
@@ -214,10 +207,10 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                                  images/thumb-icarus0.png,
-                                  images/thumb-icarus1.png,
-                                  images/thumb-icarus2.png"></div>
-                    <img class="thumb-icon" src="images/icon-icarus.png"/>
+                                  ../images/thumb-icarus0.png,
+                                  ../images/thumb-icarus1.png,
+                                  ../images/thumb-icarus2.png"></div>
+                    <img class="thumb-icon" src="../images/icon-icarus.png"/>
                     <div class="thumb-image-dim" style="background-color: #27679d"></div>
                 </div>
                 <div class="feature-frame">
@@ -240,7 +233,7 @@
 
         <div class="section-title-bg">
             <div class="section-title-text" data-short-text="Game Jams">Game Jams & Hackathons</div>
-            <img class="section-badge" src="images/section-badge-game-jams.png"/>
+            <img class="section-badge" src="../images/section-badge-game-jams.png"/>
         </div>
 
         <div class="feature-section">
@@ -248,11 +241,11 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                                  images/thumb-trashville0.png,
-                                  images/thumb-trashville1.png,
-                                  images/thumb-trashville2.png,
-                                  images/thumb-trashville3.png"></div>
-                    <img class="thumb-icon" src="images/icon-trashville.png"/>
+                                  ../images/thumb-trashville0.png,
+                                  ../images/thumb-trashville1.png,
+                                  ../images/thumb-trashville2.png,
+                                  ../images/thumb-trashville3.png"></div>
+                    <img class="thumb-icon" src="../images/icon-trashville.png"/>
                     <div class="thumb-image-dim" style="background-color: #3a4937"></div>
                 </div>
                 <div class="feature-frame">
@@ -272,11 +265,11 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler" data-thumb-cycle-images="
-                                  images/thumb-thelastpals0.png,
-                                  images/thumb-thelastpals1.png,
-                                  images/thumb-thelastpals2.png,
-                                  images/thumb-thelastpals3.png"></div>
-                    <img class="thumb-icon" src="images/icon-thelastpals.png"/>
+                                  ../images/thumb-thelastpals0.png,
+                                  ../images/thumb-thelastpals1.png,
+                                  ../images/thumb-thelastpals2.png,
+                                  ../images/thumb-thelastpals3.png"></div>
+                    <img class="thumb-icon" src="../images/icon-thelastpals.png"/>
                     <div class="thumb-image-dim" style="background-color: #697b66"></div>
                 </div>
                 <div class="feature-frame">
@@ -297,7 +290,7 @@
 
         <div class="section-title-bg">
             <div class="section-title-text" data-short-text="Tools & Libs">Tools and Libraries</div>
-            <img class="section-badge" src="images/section-badge-tools.png"/>
+            <img class="section-badge" src="../images/section-badge-tools.png"/>
         </div>
 
         <div class="feature-section">
@@ -305,8 +298,8 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler"
-                         data-thumb-cycle-images="images/thumb-gdx-tp0.png"></div>
-                    <img class="thumb-icon square" src="images/icon-gdx-tp.png"/>
+                         data-thumb-cycle-images="../images/thumb-gdx-tp0.png"></div>
+                    <img class="thumb-icon square" src="../images/icon-gdx-tp.png"/>
                     <div class="thumb-image-dim" style="background-color: #999290"></div>
                 </div>
                 <div class="feature-frame">
@@ -326,8 +319,8 @@
             <div class="feature-item">
                 <div class="thumb-image-container">
                     <div class="cycler"
-                         data-thumb-cycle-images="images/thumb-gdx-vfx0.png"></div>
-                    <img class="thumb-icon" src="images/icon-gdx-vfx.png"/>
+                         data-thumb-cycle-images="../images/thumb-gdx-vfx0.png"></div>
+                    <img class="thumb-icon" src="../images/icon-gdx-vfx.png"/>
                     <div class="thumb-image-dim" style="background-color: #69558d"></div>
                 </div>
                 <div class="feature-frame">
@@ -348,37 +341,32 @@
 
         <div class="face-holder"> <!--data-aos="fade-up"-->
             <div>
-                <input class="face miha" type="image" src="images/face-miha.png"
+                <input class="face miha" type="image" src="../images/face-miha.png"
                        onclick="window.open('https://vk.com/theface')"
                        oncontextmenu="return false"/>
-                <input class="face antoha" type="image" src="images/face-antoha.png"
+                <input class="face antoha" type="image" src="../images/face-antoha.png"
                        onclick="window.open('https://www.linkedin.com/in/anton-chekulaev-4b69b79a')"
                        oncontextmenu="return false"></div>
-            </div>
         </div>
     </div>
+</div>
 
 
-    <div class="footer-pane">
-        <p class="credits-text">© 2012-2020 Crashinvaders</p>
-        <div style="margin: auto;">
-            <div style="display: inline-block; margin-bottom: -5px">
-                <a href="mailto:contact@crashinvaders.com" target="_blank"
-                   class="btn-social-link mail" title="Email"></a>
-                <a href="https://twitter.com/crashinvaders" target="_blank"
-                   class="btn-social-link twit" title="Twitter"></a>
-                <a href="https://www.fb.com/crashinvaders/" target="_blank"
-                   class="btn-social-link fb" title="Facebook"></a>
-                <a href="https://vk.com/crashinvaders" target="_blank"
-                   class="btn-social-link vk" title="VKontakte"></a>
-            </div>
+<div class="footer-pane">
+    <p class="credits-text">© 2012-2020 Crashinvaders</p>
+    <div style="margin: auto;">
+        <div style="display: inline-block; margin-bottom: -5px">
+            <a href="mailto:contact@crashinvaders.com" target="_blank"
+               class="btn-social-link mail" title="Email"></a>
+            <a href="https://twitter.com/crashinvaders" target="_blank"
+               class="btn-social-link twit" title="Twitter"></a>
+            <a href="https://www.fb.com/crashinvaders/" target="_blank"
+               class="btn-social-link fb" title="Facebook"></a>
+            <a href="https://vk.com/crashinvaders" target="_blank"
+               class="btn-social-link vk" title="VKontakte"></a>
         </div>
     </div>
-
-<div>
-
-<!-- Main script -->
-<script type="text/javascript" src="js/index.js"></script>
+</div>
 
 </body>
 </html>
