CSS bundled as an external file. Site pre-loader.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,14 +24,14 @@
 </head>
 <body>
 
-<!--<div class="preloader-overlay">-->
-<!--    <div class="preloader-content">-->
-<!--        <img class="preloader-logo" src="../images/crash-logo.png"/>-->
-<!--        <div class="preloader-bar-frame">-->
-<!--            <div class="preloader-bar-fill"></div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<div class="preloader-overlay">
+    <div class="preloader-content">
+        <img class="preloader-logo" src="../images/crash-logo.png"/>
+        <div class="preloader-bar-frame">
+            <div class="preloader-bar-fill"></div>
+        </div>
+    </div>
+</div>
 
 <div class="site-content">
 
@@ -43,7 +43,7 @@
         <div class="ground-pile left"></div>
         <div class="ground-pile right"></div>
 
-        <div class="about-pane" data-aos="fade-right" data-aos-delay="500">
+        <div class="about-pane" data-aos="fade-right" data-aos-delay="250">
             <div>
                 <p style="text-align: center">
                     Hey there stranger!
