Use PUG for HTML templates.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,3 +1,5 @@
+<!-- WARNING: This is an old HTML template replaced with the PUG. DO NOT MODIFY IT! -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +14,7 @@
     <meta name="google-site-verification" content="DlhZ40EQqdoDURJOcpZPqqfIKhL6ZZ3jtxHP1Wawono">
 
     <title>Crashinvaders</title>
-    <meta name="description" content="Crashinvaders Official Site">
+    <meta name="description" content="Crashinvaders Official  Site">
     <meta name="author" content="Anton Chekulaev">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
     <meta name="theme-color" content="#d7b098">
@@ -120,7 +122,7 @@
                 </div>
                 <div class="feature-frame">
                     <p class="thumb-title">Jolly Dog</p>
-                    <p class="thumb-desc">Simple yet beatiful game for your beloved pet</p>
+                    <p class="thumb-desc">Simple yet beautiful game for your beloved pet</p>
                     <div class="thumb-links-pane">
                         <p class="thumb-available-text">Available now on:</p>
                         <div style="display: inline-block">
