Fix libGDX spelling.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -306,7 +306,7 @@
                 </div>
                 <div class="feature-frame">
                     <p class="thumb-title" style="font-size: 22px; margin-bottom: 6px">GDX Texture Packer</p>
-                    <p class="thumb-desc">Packs and manages texture atlases for LibGDX game framework</p>
+                    <p class="thumb-desc">Packs and manages texture atlases for libGDX game framework</p>
                     <div class="thumb-links-pane">
                         <p class="thumb-available-text">Get it now on:</p>
                         <div style="display: inline-block">
@@ -327,7 +327,7 @@
                 </div>
                 <div class="feature-frame">
                     <p class="thumb-title">GDX VFX</p>
-                    <p class="thumb-desc">LibGDX post-processing visual effects library</p>
+                    <p class="thumb-desc">libGDX post-processing visual effects library</p>
                     <div class="thumb-links-pane">
                         <p class="thumb-available-text">Get it now on:</p>
                         <div style="display: inline-block">
